Fixed project technologies container footer weird spacing

--- a/src/components/Content/Projects/Project.scss
+++ b/src/components/Content/Projects/Project.scss
@@ -77,6 +77,7 @@
     @media (max-width: $breakPointTablet) {
         .projectTechnologiesContainer {
             position: relative;
+            display: flex;
         }
     }
 }
